Convert to MyST for Jupyter Book

--- a/02-numpy.ipynb
+++ b/02-numpy.ipynb
@@ -5,7 +5,6 @@
    "id": "f93aadbd",
    "metadata": {},
    "source": [
-    "\n",
     "# Analyzing Patient Data\n",
     "## Objectives\n",
     "* Explain what a library is and what libraries are used for.\n",
@@ -48,9 +47,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a53165f0",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
@@ -69,9 +66,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e25b8ba5",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
@@ -90,7 +85,6 @@
    "execution_count": null,
    "id": "1e5e0a17",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -129,7 +123,6 @@
    "execution_count": null,
    "id": "01c36e84",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -150,7 +143,6 @@
    "execution_count": null,
    "id": "e5147f71",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -172,7 +164,6 @@
    "execution_count": null,
    "id": "45573836",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -200,9 +191,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "05060f8d",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('first value in data:', data[0, 0])"
@@ -225,7 +214,6 @@
    "execution_count": null,
    "id": "931ac33b",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -257,9 +245,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6fa49218",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(data[5:10, 0:10])"
@@ -277,9 +263,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "29672cb1",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "small = data[:3, 36:]\n",
@@ -301,7 +285,6 @@
    "execution_count": null,
    "id": "89add13d",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -322,7 +305,6 @@
    "execution_count": null,
    "id": "ddac44fa",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -385,9 +367,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "089f22d0",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(numpy.max(patient_0))"
@@ -405,9 +385,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d4b80b97",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('maximum inflammation for patient 3:', numpy.max(data[2, :]))"
@@ -431,7 +409,6 @@
    "execution_count": null,
    "id": "8b9268f1",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -470,9 +447,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2c8c71cd",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(numpy.mean(data, axis=1))"
@@ -580,11 +555,11 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "autoscroll,scrolled,tags",
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
