--- a/04-lists.ipynb
+++ b/04-lists.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "8edfe176",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Storing Multiple Values in Lists\n",
     "## Objectives\n",
@@ -39,9 +37,7 @@
   {
    "cell_type": "markdown",
    "id": "c5a7b03b",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "As previously, index `0` represents the first element, and index `3` the fourth element."
    ]
@@ -50,9 +46,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ecf5e029",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('first element:', odds[0])\n",
@@ -81,7 +75,6 @@
    "execution_count": null,
    "id": "069a9f8c",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -93,9 +86,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dab53b9c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[1:])"
@@ -106,7 +97,6 @@
    "execution_count": null,
    "id": "21fda86f",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -134,7 +124,7 @@
     "|elements| 1  | 3  | 5  | 7  |\n",
     "|--------|----|----|----|----|\n",
     "|indexes | 0  | 1  | 2  | 3  |\n",
-    "|indexes | -4 | -3 | -2 | -1 |\n"
+    "|indexes | -4 | -3 | -2 | -1 |"
    ]
   },
   {
@@ -142,7 +132,6 @@
    "execution_count": null,
    "id": "41ba325d",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -154,9 +143,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fadfc3dd",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[-3:-1])"
@@ -166,9 +153,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1fb2fa80",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[:-3])"
@@ -189,9 +174,7 @@
   {
    "cell_type": "markdown",
    "id": "2c653522",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Can we print the list in reverse, with two different way?"
    ]
@@ -200,9 +183,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5699de0d",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[::-1])"
@@ -221,9 +202,7 @@
   {
    "cell_type": "markdown",
    "id": "c872fae4",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "There is one very important difference between list and string, we can change the values in a list, but we cannot change individual characters in a string. For example:"
    ]
@@ -232,9 +211,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9a6b8305",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "names = ['Curie', 'Darwing', 'Turing']  # typo in Darwin's name\n",
@@ -246,9 +223,7 @@
   {
    "cell_type": "markdown",
    "id": "91e2dcf0",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "works but the following does not:"
    ]
@@ -271,9 +246,7 @@
   {
    "cell_type": "markdown",
    "id": "95720cfd",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We've seen previously that strings are *immutable* and lists are *mutable*.\n",
     "\n",
@@ -285,7 +258,6 @@
    "execution_count": null,
    "id": "24cf6340",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -296,9 +268,7 @@
   {
    "cell_type": "markdown",
    "id": "2409c3d6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Did we really make a copy?"
    ]
@@ -307,9 +277,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ce093b5e",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "other[0] = 99\n",
@@ -320,9 +288,7 @@
   {
    "cell_type": "markdown",
    "id": "b3220805",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "No since both variable from the assignation points to the same data in memory.\n",
     "In order to effectively copy, we construct another list from the original one:"
@@ -344,9 +310,7 @@
   {
    "cell_type": "markdown",
    "id": "fdbffb02",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "A `list` also has methods. We can use `append` to add an element at the end of the list. Or see `help(list)` to get the list of available methods."
    ]
@@ -355,9 +319,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "97d5d212",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "odds.append(9)\n",
@@ -367,9 +329,7 @@
   {
    "cell_type": "markdown",
    "id": "b78b8d7f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can also remove an element from the list."
    ]
@@ -390,9 +350,7 @@
   {
    "cell_type": "markdown",
    "id": "614a8d43",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The elements of a list can also be sorted. These methods (`append`, `remove`, `sort`, ...) work in-place (modifying directly the object)."
    ]
@@ -401,9 +359,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e032b59",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "odds.sort()\n",
@@ -415,9 +371,7 @@
   {
    "cell_type": "markdown",
    "id": "fee47e72",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Or we could use the built-in function `sorted`. In this case, the original data structure is not touched, a copy is returned."
    ]
@@ -437,9 +391,7 @@
   {
    "cell_type": "markdown",
    "id": "3a7f2a07",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Python lists can contain elements of different types. For example:"
    ]
@@ -458,9 +410,7 @@
   {
    "cell_type": "markdown",
    "id": "b919c635",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We've seen that lists are indexed and can be sliced using `[start:end:step]` notation as with strings."
    ]
@@ -481,9 +431,7 @@
   {
    "cell_type": "markdown",
    "id": "c56b1f9c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can even add a list as an element:"
    ]
@@ -503,9 +451,7 @@
   {
    "cell_type": "markdown",
    "id": "b479c7ab",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "And what happens if we addition two lists?"
    ]
@@ -514,9 +460,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b34e139",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds + chromosomes)"
@@ -525,9 +469,7 @@
   {
    "cell_type": "markdown",
    "id": "d2658ed6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Lists can be concatenated together with the `+` operator.\n",
     "\n",
@@ -543,9 +485,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9fdab8d7",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nums = [1, 111, 2, 3, 5, 8, 13, 2, 34, 55, 89]"
@@ -579,11 +519,11 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
