--- a/01-fundamentals.ipynb
+++ b/01-fundamentals.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "4c503f06",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Python Fundamentals\n",
     "## Objectives\n",
@@ -68,9 +66,7 @@
   {
    "cell_type": "markdown",
    "id": "07b062a7",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "In Python, variable names:\n",
     "\n",
@@ -138,9 +134,7 @@
   {
    "cell_type": "markdown",
    "id": "f53739c0",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "In the example above, the variable `weight_kg` has an integer value of `60`. If we want to more precisely track the weight of our patient, we can use a floating point value by executing:"
    ]
@@ -160,9 +154,7 @@
   {
    "cell_type": "markdown",
    "id": "0e2080d1",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "To create a string, we add single or double quotes around some text. To identify and track a patient throughout our study, we can assign each person a unique identifier by storing it in a string:"
    ]
@@ -180,9 +172,7 @@
   {
    "cell_type": "markdown",
    "id": "cb189b76",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "## Using Variables in Python\n",
     "Once we have data stored with variable names, we can make use of it in calculations. We may want to store our patient’s weight in pounds as well as kilograms:"
@@ -203,9 +193,7 @@
   {
    "cell_type": "markdown",
    "id": "3238c552",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We might decide to add a prefix to our patient identifier. We can add another string value by concatenating two strings:"
    ]
@@ -223,9 +211,7 @@
   {
    "cell_type": "markdown",
    "id": "5f25aecd",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "## Built-in functions\n",
     "A function is:\n",
@@ -250,9 +236,7 @@
   {
    "cell_type": "markdown",
    "id": "d4dce12c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "When we want to make use of a function, referred to as calling the function, we follow its name by parentheses. The parentheses are important: if you leave them off, the function doesn’t actually run! Sometimes you will include values or variables inside the parentheses for the function to use. In the case of `print`, we use the parentheses to tell the function what value we want to display. We will learn more about how functions work and how to create our own in a later chapter.\n",
     "\n",
@@ -272,9 +256,7 @@
   {
    "cell_type": "markdown",
    "id": "26fb7c8c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can also embed another function call, for example if we printed the value's data type:"
    ]
@@ -293,9 +275,7 @@
   {
    "cell_type": "markdown",
    "id": "01108f41",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can also do arithmetic with variables:"
    ]
@@ -313,9 +293,7 @@
   {
    "cell_type": "markdown",
    "id": "bb8040ab",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The value of `weight_kg` was not altered:"
    ]
@@ -333,9 +311,7 @@
   {
    "cell_type": "markdown",
    "id": "79393b9c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "In order to change the value of the `weight_kg` variable, we have to *assign* a new value:"
    ]
@@ -354,9 +330,7 @@
   {
    "cell_type": "markdown",
    "id": "d36658dc",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Exercices\n",
     "#### 1. What values do the variables `mass` and `age` have after each of the following statements?"
@@ -366,9 +340,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "edff8513",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mass = 47.5\n",
@@ -392,9 +364,7 @@
   {
    "cell_type": "markdown",
    "id": "f5c46046",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "#### 2. What are the data types of the following variables?"
    ]
@@ -403,9 +373,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ed03739b",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "planet = 'Earth'\n",
@@ -442,11 +410,11 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
