--- a/07-functions.ipynb
+++ b/07-functions.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "d1c2b6ca",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Creating Function\n",
     "## Objectives\n",
@@ -26,7 +24,6 @@
    "execution_count": null,
    "id": "10d012ce",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -37,9 +34,7 @@
   {
    "cell_type": "markdown",
    "id": "5225be51-a6d3-4ee3-9b50-88683642dc87",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "![image](images/python-function.svg)\n",
     "\n",
@@ -53,7 +48,6 @@
    "execution_count": null,
    "id": "f736bc86",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -64,9 +58,7 @@
   {
    "cell_type": "markdown",
    "id": "c7ac89f1",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The above call our function with the parameter `temp` set to `32` and then return the function value. We can reuse our function:"
    ]
@@ -85,9 +77,7 @@
   {
    "cell_type": "markdown",
    "id": "f45d0861",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Composing Functions\n",
     "We can also write the function to turn Celsius into Kelvin, now that we've successfully written our `fahr_to_celsius` function."
@@ -111,9 +101,7 @@
   {
    "cell_type": "markdown",
    "id": "70b46760",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "And let’s not forget about converting Fahrenheit to Kelvin! We can reuse our previous functions to compose a new function:"
    ]
@@ -136,9 +124,7 @@
   {
    "cell_type": "markdown",
    "id": "c46f2d21",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We define basic operations and combine them into functions, and reuse them to create a larger script. Typically, functions will have approximately a dozen lines, so they are simple and easily readable.\n",
     "\n",
@@ -174,7 +160,6 @@
    "execution_count": null,
    "id": "227a037b",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -215,9 +200,7 @@
   {
    "cell_type": "markdown",
    "id": "310d1917",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "By documenting and commenting your functions, you help yourself and potential readers."
    ]
@@ -226,9 +209,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ad0a378f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "help(fahr_to_celsius)"
@@ -237,9 +218,7 @@
   {
    "cell_type": "markdown",
    "id": "a282ada0",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The `docstring` is printed when using the built-in `help` function, while comments are otherwise ignored.\n",
     "\n",
@@ -272,7 +251,6 @@
    "execution_count": null,
    "id": "a4258b73",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -283,9 +261,7 @@
   {
    "cell_type": "markdown",
    "id": "e2613678",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The arguments can be given by their names (especially interesting when there are many arguments)."
    ]
@@ -305,9 +281,7 @@
   {
    "cell_type": "markdown",
    "id": "eba13cc6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Exercises\n",
     "#### 1.\n",
@@ -319,7 +293,6 @@
    "execution_count": null,
    "id": "3654277d",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": []
    },
    "outputs": [],
@@ -331,9 +304,7 @@
   {
    "cell_type": "markdown",
    "id": "8ed45826",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Redefine the function `display` such as every parameter has a default value of `1`, `2`, `3` respectively."
    ]
@@ -343,7 +314,6 @@
    "execution_count": null,
    "id": "f53badb8",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -354,9 +324,7 @@
   {
    "cell_type": "markdown",
    "id": "2fdf2ffe",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Then execute it :\n",
     "- without parameters\n",
@@ -382,9 +350,7 @@
   {
    "cell_type": "markdown",
    "id": "7a851ca0",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "#### 2. Combining Strings\n",
     "Write a function `wrap` that takes two strings as input and returns the first one wrapped (surrounded) with the second one. The default wrapping string is `*`.\n",
@@ -413,9 +379,7 @@
   {
    "cell_type": "markdown",
    "id": "84ead99f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Assert the function is correct:"
    ]
@@ -435,9 +399,7 @@
   {
    "cell_type": "markdown",
    "id": "6a012831",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Print the results:"
    ]
@@ -457,9 +419,7 @@
   {
    "cell_type": "markdown",
    "id": "31af20a5",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "#### 3. Variables Inside and Outside Functions\n",
     "What will the following code print (and why)?"
@@ -517,11 +477,11 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
