--- a/solutions/02-numpy.ipynb
+++ b/solutions/02-numpy.ipynb
@@ -5,7 +5,6 @@
    "id": "f93aadbd",
    "metadata": {},
    "source": [
-    "\n",
     "# Analyzing Patient Data\n",
     "## Objectives\n",
     "* Explain what a library is and what libraries are used for.\n",
@@ -50,9 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a53165f0",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
@@ -71,9 +68,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e25b8ba5",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
@@ -92,7 +87,6 @@
    "execution_count": null,
    "id": "1e5e0a17",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -133,7 +127,6 @@
    "execution_count": null,
    "id": "01c36e84",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -156,7 +149,6 @@
    "execution_count": null,
    "id": "e5147f71",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -180,7 +172,6 @@
    "execution_count": null,
    "id": "45573836",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -210,9 +201,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "05060f8d",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('first value in data:', data[0, 0])"
@@ -235,7 +224,6 @@
    "execution_count": null,
    "id": "931ac33b",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -269,9 +257,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6fa49218",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(data[5:10, 0:10])"
@@ -289,9 +275,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "29672cb1",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "small = data[:3, 36:]\n",
@@ -313,7 +297,6 @@
    "execution_count": null,
    "id": "89add13d",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -336,7 +319,6 @@
    "execution_count": null,
    "id": "ddac44fa",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -405,9 +387,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "089f22d0",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(numpy.max(patient_0))"
@@ -425,9 +405,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d4b80b97",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('maximum inflammation for patient 3:', numpy.max(data[2, :]))"
@@ -451,7 +429,6 @@
    "execution_count": null,
    "id": "8b9268f1",
    "metadata": {
-    "lines_to_next_cell": 2,
     "tags": [
      "empty"
     ]
@@ -492,9 +469,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2c8c71cd",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(numpy.mean(data, axis=1))"
@@ -608,11 +583,11 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "autoscroll,scrolled,tags",
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
