--- a/solutions/03-matplotlib.ipynb
+++ b/solutions/03-matplotlib.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "0910d43f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Visualizing Tabular Data\n",
     "## Objectives\n",
@@ -38,9 +36,7 @@
   {
    "cell_type": "markdown",
    "id": "9cc6a60a",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We also need to load the data in this notebook:"
    ]
@@ -59,9 +55,7 @@
   {
    "cell_type": "markdown",
    "id": "abe35554",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can now plot our data:"
    ]
@@ -70,9 +64,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "49c51a26",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "image = matplotlib.pyplot.imshow(data)\n",
@@ -82,9 +74,7 @@
   {
    "cell_type": "markdown",
    "id": "e037900f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Each row in the heat map corresponds to a patient in the clinical trial dataset, and each column corresponds to a day in the dataset. Blue pixels in this heat map represent low values, while yellow pixels represent high values. As we can see, the general number of inflammation flare-ups for the patients rises and falls over a 40-day period.\n",
     "\n",
@@ -106,9 +96,7 @@
   {
    "cell_type": "markdown",
    "id": "62ac8482",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Can we have a look at the maximum and minimum?"
    ]
@@ -133,9 +121,7 @@
   {
    "cell_type": "markdown",
    "id": "d77f5af6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Grouping plots\n",
     "We can group similar plots in a single figure using subplots. Here's a complete example:"
@@ -187,11 +173,11 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
