--- a/solutions/04-lists.ipynb
+++ b/solutions/04-lists.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "8edfe176",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Storing Multiple Values in Lists\n",
     "## Objectives\n",
@@ -43,9 +41,7 @@
   {
    "cell_type": "markdown",
    "id": "c5a7b03b",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "As previously, index `0` represents the first element, and index `3` the fourth element."
    ]
@@ -54,9 +50,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ecf5e029",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('first element:', odds[0])\n",
@@ -85,7 +79,6 @@
    "execution_count": null,
    "id": "069a9f8c",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -99,9 +92,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dab53b9c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[1:])"
@@ -112,7 +103,6 @@
    "execution_count": null,
    "id": "21fda86f",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -142,7 +132,7 @@
     "|elements| 1  | 3  | 5  | 7  |\n",
     "|--------|----|----|----|----|\n",
     "|indexes | 0  | 1  | 2  | 3  |\n",
-    "|indexes | -4 | -3 | -2 | -1 |\n"
+    "|indexes | -4 | -3 | -2 | -1 |"
    ]
   },
   {
@@ -150,7 +140,6 @@
    "execution_count": null,
    "id": "41ba325d",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -164,9 +153,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fadfc3dd",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[-3:-1])"
@@ -176,9 +163,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1fb2fa80",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[:-3])"
@@ -201,9 +186,7 @@
   {
    "cell_type": "markdown",
    "id": "2c653522",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Can we print the list in reverse, with two different way?"
    ]
@@ -212,9 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5699de0d",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[::-1])"
@@ -233,9 +214,7 @@
   {
    "cell_type": "markdown",
    "id": "c872fae4",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "There is one very important difference between list and string, we can change the values in a list, but we cannot change individual characters in a string. For example:"
    ]
@@ -244,9 +223,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9a6b8305",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "names = ['Curie', 'Darwing', 'Turing']  # typo in Darwin's name\n",
@@ -258,9 +235,7 @@
   {
    "cell_type": "markdown",
    "id": "91e2dcf0",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "works but the following does not:"
    ]
@@ -283,9 +258,7 @@
   {
    "cell_type": "markdown",
    "id": "95720cfd",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We've seen previously that strings are *immutable* and lists are *mutable*.\n",
     "\n",
@@ -297,7 +270,6 @@
    "execution_count": null,
    "id": "24cf6340",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -310,9 +282,7 @@
   {
    "cell_type": "markdown",
    "id": "2409c3d6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Did we really make a copy?"
    ]
@@ -321,9 +291,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ce093b5e",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "other[0] = 99\n",
@@ -334,9 +302,7 @@
   {
    "cell_type": "markdown",
    "id": "b3220805",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "No since both variable from the assignation points to the same data in memory.\n",
     "In order to effectively copy, we construct another list from the original one:"
@@ -358,9 +324,7 @@
   {
    "cell_type": "markdown",
    "id": "fdbffb02",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "A `list` also has methods. We can use `append` to add an element at the end of the list. Or see `help(list)` to get the list of available methods."
    ]
@@ -369,9 +333,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "97d5d212",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "odds.append(9)\n",
@@ -381,9 +343,7 @@
   {
    "cell_type": "markdown",
    "id": "b78b8d7f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can also remove an element from the list."
    ]
@@ -404,9 +364,7 @@
   {
    "cell_type": "markdown",
    "id": "614a8d43",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The elements of a list can also be sorted. These methods (`append`, `remove`, `sort`, ...) work in-place (modifying directly the object)."
    ]
@@ -415,9 +373,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e032b59",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "odds.sort()\n",
@@ -429,9 +385,7 @@
   {
    "cell_type": "markdown",
    "id": "fee47e72",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Or we could use the built-in function `sorted`. In this case, the original data structure is not touched, a copy is returned."
    ]
@@ -451,9 +405,7 @@
   {
    "cell_type": "markdown",
    "id": "3a7f2a07",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Python lists can contain elements of different types. For example:"
    ]
@@ -472,9 +424,7 @@
   {
    "cell_type": "markdown",
    "id": "b919c635",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We've seen that lists are indexed and can be sliced using `[start:end:step]` notation as with strings."
    ]
@@ -495,9 +445,7 @@
   {
    "cell_type": "markdown",
    "id": "c56b1f9c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can even add a list as an element:"
    ]
@@ -520,9 +468,7 @@
   {
    "cell_type": "markdown",
    "id": "b479c7ab",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "And what happens if we addition two lists?"
    ]
@@ -531,9 +477,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b34e139",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds + chromosomes)"
@@ -542,9 +486,7 @@
   {
    "cell_type": "markdown",
    "id": "d2658ed6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Lists can be concatenated together with the `+` operator.\n",
     "\n",
@@ -560,9 +502,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9fdab8d7",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nums = [1, 111, 2, 3, 5, 8, 13, 2, 34, 55, 89]"
@@ -599,11 +539,11 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
