--- a/solutions/05-loops.ipynb
+++ b/solutions/05-loops.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "0822bc04-8f37-4d27-a40a-34d23e5e3b07",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Repeating Actions with Loops\n",
     "## Objectives\n",
@@ -23,7 +21,6 @@
    "execution_count": null,
    "id": "e6adef34",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -36,9 +33,7 @@
   {
    "cell_type": "markdown",
    "id": "278ccef7",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "In Python, a list is basically an ordered collection of elements, and every element has a unique number associated with it — its index. This means that we can access elements in a list using their indices. For example, we can get the first number in the list `odds`, by using `odds[0]`. One way to print each number is to use four print statements:"
    ]
@@ -47,9 +42,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "afc64bd4",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(odds[0])\n",
@@ -61,9 +54,7 @@
   {
    "cell_type": "markdown",
    "id": "0f0e2d48",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "But if the list changes..."
    ]
@@ -73,7 +64,6 @@
    "execution_count": null,
    "id": "1c1e3cc3",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "raises-exception"
     ]
@@ -90,9 +80,7 @@
   {
    "cell_type": "markdown",
    "id": "bb7b7d95",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "This is a bad approach for three reasons:\n",
     "\n",
@@ -108,7 +96,6 @@
    "execution_count": null,
    "id": "36762d07",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -122,9 +109,7 @@
   {
    "cell_type": "markdown",
    "id": "96a7477d",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "and more robust, for instance if the list is longer:"
    ]
@@ -148,9 +133,7 @@
   {
    "cell_type": "markdown",
    "id": "66a8399a",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The improved version is calling the print function for each element of the sequence. The general form of a loop is (note the indentation):\n",
     "```\n",
@@ -180,9 +163,7 @@
   {
    "cell_type": "markdown",
    "id": "98f59fb2",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Here’s another loop that repeatedly updates a variable. In this example note the indentation of the `print` statement, indicating that it's outside the loop, therefore executed after:"
    ]
@@ -204,9 +185,7 @@
   {
    "cell_type": "markdown",
    "id": "d5be57c6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Note that a loop variable is a variable that is being used to record progress in a loop. It still exists after the loop is over, and we can re-use variables previously defined as loop variables:"
    ]
@@ -227,9 +206,7 @@
   {
    "cell_type": "markdown",
    "id": "65d2787c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "A common operation is finding the length of an object. Python has a built-in function named `len`:"
    ]
@@ -239,7 +216,6 @@
    "execution_count": null,
    "id": "c5871bde",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -252,9 +228,7 @@
   {
    "cell_type": "markdown",
    "id": "99345fc6",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "Another built-in function named `range` can be very useful with `for` loops. This function creates a sequence of integers.\n",
     "- If one parameter is given, `range` creates a sequence of that length, starting at zero and incrementing by step of 1.\n",
@@ -277,9 +251,7 @@
   {
    "cell_type": "markdown",
    "id": "33096842",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Exercises\n",
     "#### 1. Range\n",
@@ -304,9 +276,7 @@
   {
    "cell_type": "markdown",
    "id": "e414abb3",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "#### 2. Summing a list\n",
     "Write a loop that calculates the sum of elements in a list by adding each element and printing the final value.\n",
@@ -345,11 +315,11 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
