--- a/solutions/06-choices.ipynb
+++ b/solutions/06-choices.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "f51d8f13",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Making Choices\n",
     "## Objectives\n",
@@ -25,7 +23,6 @@
    "execution_count": null,
    "id": "3fd8517e",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -40,7 +37,6 @@
    "execution_count": null,
    "id": "029b2b17",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -53,9 +49,7 @@
   {
    "cell_type": "markdown",
    "id": "901401fc",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can also construct `Booleans` from other values. For example, `False` and `True` are the equivalent of `0` and `1` respectively. \n",
     "\n",
@@ -69,9 +63,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "40c6a66e",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(bool(1)) \n",
@@ -82,9 +74,7 @@
   {
    "cell_type": "markdown",
    "id": "383a5e20",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can also express conditions with relational operators:"
    ]
@@ -107,9 +97,7 @@
   {
    "cell_type": "markdown",
    "id": "25d57741",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "We can also express multiple conditions with the logical operators `and` or `or`. \n",
     "\n",
@@ -147,9 +135,7 @@
   {
    "cell_type": "markdown",
    "id": "04094170",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "What will the following expression returns?"
    ]
@@ -159,7 +145,6 @@
    "execution_count": null,
    "id": "46b52ae9",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -173,9 +158,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "be389a07",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "True and False and True"
@@ -186,7 +169,6 @@
    "execution_count": null,
    "id": "a03a1057",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -200,9 +182,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "95c52a1c",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "True or False and True"
@@ -221,9 +201,7 @@
   {
    "cell_type": "markdown",
    "id": "58dcf5d0",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "With an `if` statement, we can decide on actions to do based on conditions:"
    ]
@@ -233,7 +211,6 @@
    "execution_count": null,
    "id": "92800457",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "empty"
     ]
@@ -251,9 +228,7 @@
   {
    "cell_type": "markdown",
    "id": "9ff9e6ee",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "The above can be visualized with:\n",
     "\n",
@@ -267,7 +242,6 @@
    "execution_count": null,
    "id": "43dfd2ad",
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "raises-exception"
     ]
@@ -287,9 +261,7 @@
   {
    "cell_type": "markdown",
    "id": "62db5574",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "As you can see the order of the conditions are very important as some relational operators cannot be used with `None`!"
    ]
@@ -314,9 +286,7 @@
   {
    "cell_type": "markdown",
    "id": "c52a3898",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "source": [
     "# Exercises\n",
     "#### 1. Smaller Than\n",
@@ -365,9 +335,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "85f07fe5",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nums = [1, 111, 2, 3, 5, 8, 13, 2, 34, 55, 89]"
@@ -417,11 +385,11 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
+   "formats": "ipynb,md:myst",
    "notebook_metadata_filter": "all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
