--- a/solutions/00-introduction.ipynb
+++ b/solutions/00-introduction.ipynb
@@ -133,7 +133,9 @@
     "  <strong>Do not use it while learning programming!</strong>\n",
     "</div>\n",
     "\n",
-    "**Bottom line** : it is best to understand what these tools suggests, before using them."
+    "**Bottom line** : it is best to understand what these tools suggests, before using them.\n",
+    "\n",
+    "![image](images/chatgpt.png)"
    ]
   }
  ],
